[package]
name = "tracks"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Kopf <ryan@ryankopf.com>"] # List of crate authors
description = "A web framework for Rust, inspired by Ruby on Rails, with enhancements for jobs, watchers, and other components."
license = "MIT"
repository = "https://github.com/tracks-rs/tracks"
homepage = "https://github.com/tracks-rs/tracks"
documentation = "https://github.com/tracks-rs/tracks"
keywords = ["web-framework", "rust", "rails-inspired"] # Keywords to find your crate
categories = ["web-programming", "asynchronous"] # Categories from crates.io


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
sea-orm = {version = "0.12.11", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.195"
tokio = {version = "1.35.1", features = ["full"]}

[dev-dependencies]
reqwest = "0.11.23"
